--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-sequelize-user",
   "description": "Expose sequelize query functions in express requests that inject the current user in returned objects",
   "private": false,
-  "version": "0.0.5",
+  "version": "0.0.6",
   "main": "index.js",
   "author": {
     "name": "Benjamin Kniffler",
@@ -22,16 +22,9 @@
     "url": "https://github.com/bkniffler/express-sequelize-user/issues"
   },
   "scripts": {},
-  "dependencies": {
-    "deep-diff": "^0.3.2",
-    "diff": "^1.4.0",
-    "lodash": "^3.10.0",
-    "object-path": "^0.9.2"
-  },
+  "dependencies": {},
   "devDependencies": {},
-  "peerDependencies": {
-    "sequelize": "2.0.0 - 3.x.x"
-  },
+  "peerDependencies": {},
   "readmeFilename": "README.md",
   "keywords": [
     "sequelize",
